--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,10 @@
     --text-dark: #333;
     --text-light: #fff;
 }
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
